--- a/.github/workflows/mase-build.yml
+++ b/.github/workflows/mase-build.yml
@@ -1,4 +1,4 @@
-name: Build and push CIRCT CI build image
+name: Build and push MASE CI build image
 
 on:
   workflow_dispatch:
@@ -11,11 +11,11 @@ jobs:
       - name: Get MASE images repo
         uses: actions/checkout@v2
       - name: Build and push image
-        working-directory: ./circt-ci-build
+        working-directory: .
         run: |
           TAG=$(date -u +%Y%m%d%H%M%S)
           echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
-          docker build . --build-arg UID=1001 --build-arg GID=1000 --build-arg VHLS_PATH=. -f Docker/Dockerfile --tag ghcr.io/${{github.repository}}/circt-ci-build:$TAG Docker
-          docker push ghcr.io/${{github.repository}}/circt-ci-build:$TAG
-          docker tag ghcr.io/${{github.repository}}/circt-ci-build:$TAG ghcr.io/${{github.repository}}/circt-ci-build:latest
-          docker push ghcr.io/${{github.repository}}/circt-ci-build:latest
+          docker build . --build-arg UID=1001 --build-arg GID=1000 --build-arg VHLS_PATH=. -f Docker/Dockerfile --tag ghcr.io/${{github.repository}}/mase-ci-build:$TAG Docker
+          docker push ghcr.io/${{github.repository}}/mase-ci-build:$TAG
+          docker tag ghcr.io/${{github.repository}}/mase-ci-build:$TAG ghcr.io/${{github.repository}}/mase-ci-build:latest
+          docker push ghcr.io/${{github.repository}}/mase-ci-build:latest
