Updated dockerfile and disable cache in building

--- a/Dockerfile-cpu
+++ b/Dockerfile-cpu
@@ -4,6 +4,7 @@ FROM ubuntu:22.04
 
 USER root
 
+# Install apt packages 
 ADD install-pkgs.sh install-pkgs.sh
 RUN bash install-pkgs.sh
 
@@ -14,54 +15,13 @@ RUN pip3 install --upgrade pip
 RUN pip3 install --pre torch-mlir torchvision \
                  -f https://github.com/llvm/torch-mlir-release/releases/expanded_assets/dev-wheels \
                  --extra-index-url https://download.pytorch.org/whl/nightly/cpu
-RUN pip3 install onnx black toml GitPython colorlog cocotb[bus]==1.8.0 \
-                 pytest pytorch-lightning transformers toml \
-                 timm pytorch-nlp datasets ipython ipdb \
-                 sentencepiece einops deepspeed pybind11 \
-                 tabulate tensorboardx hyperopt accelerate \
-                 optuna stable-baselines3 h5py scikit-learn \
-                 scipy onnxruntime matplotlib sphinx-rtd-theme \
-                 imageio imageio-ffmpeg opencv-python kornia einops \
-                 ghp-import optimum pytest-profiling myst_parser \
-                 pytest-cov pytest-xdist pytest-sugar pytest-html \
-                 lightning wandb bitarray bitstring emoji \
-    && pip install -U Pillow \
-    && pip install mpmath==1.3.0 
+
+# Install pip packages 
+ADD install-pips.sh install-pips.sh
+RUN bash install-pips.sh
 
 # Add environment variables
 ARG VHLS_PATH
 ARG VHLS_VERSION
-RUN printf "\
-\nexport LIBRARY_PATH=/usr/lib/x86_64-linux-gnu:\$LIBRARY_PATH \
-\n# Basic PATH setup \
-\nexport PATH=/workspace/scripts:/workspace/hls/build/bin:/workspace/llvm/build/bin:\$PATH:/srcPkgs/verible/bin \
-\n# Vitis HLS setup \
-\nexport VHLS=${vhls} \
-\nexport XLNX_VERSION=\$XLNX_VERSION \
-\n# source \$VHLS_PATH/Vitis_HLS/\$XLNX_VERSION/settings64.sh \
-\n# MLIR-AIE PATH setup \
-\nexport PATH=/srcPkgs/cmake/bin:/workspace/hls/build/bin:/workspace/llvm/build/bin:/workspace/mlir-aie/install/bin:/workspace/mlir-air/install/bin:\$PATH \
-\nexport PYTHONPATH=/workspace:/workspace/machop:/workspace/mlir-aie/install/python:/workspace/mlir-air/install/python:\$PYTHONPATH \
-\nexport LD_LIBRARY_PATH=/workspace/mlir-aie/lib:/workspace/mlir-air/lib:/opt/xaiengine:\$LD_LIBRARY_PATH \
-\n# Thread setup \
-\nexport nproc=\$(grep -c ^processor /proc/cpuinfo) \
-\n# Terminal color... \
-\nexport PS1=\"[\\\\\\[\$(tput setaf 3)\\\\\\]\\\t\\\\\\[\$(tput setaf 2)\\\\\\] \\\u\\\\\\[\$(tput sgr0)\\\\\\]@\\\\\\[\$(tput setaf 2)\\\\\\]\\\h \\\\\\[\$(tput setaf 7)\\\\\\]\\\w \\\\\\[\$(tput sgr0)\\\\\\]] \\\\\\[\$(tput setaf 6)\\\\\\]$ \\\\\\[\$(tput sgr0)\\\\\\]\" \
-\nexport LS_COLORS='rs=0:di=01;96:ln=01;36:mh=00:pi=40;33:so=01;35:do=01;35:bd=40;33;01' \
-\nalias ls='ls --color' \
-\nalias grep='grep --color'\n" >> /root/.bashrc
-
-#Add vim environment
-RUN printf "\
-\nset autoread \
-\nautocmd BufWritePost *.cpp silent! !clang-format -i <afile> \
-\nautocmd BufWritePost *.c   silent! !clang-format -i <afile> \
-\nautocmd BufWritePost *.h   silent! !clang-format -i <afile> \
-\nautocmd BufWritePost *.hpp silent! !clang-format -i <afile> \
-\nautocmd BufWritePost *.cc  silent! !clang-format -i <afile> \
-\nautocmd BufWritePost *.py  silent! set tabstop=4 shiftwidth=4 expandtab \
-\nautocmd BufWritePost *.py  silent! !python3 -m black <afile> \
-\nautocmd BufWritePost *.sv  silent! !verible-verilog-format --inplace <afile> \
-\nautocmd BufWritePost *.v  silent! !verible-verilog-format --inplace <afile> \
-\nautocmd BufWritePost * redraw! \
-\n" >> /root/.vimrc
+ADD install-env.sh install-env.sh
+RUN bash install-env.sh $VHLS_PATH $VHLS_VERSION
