--- a/.github/workflows/docker-image-cpu.yml
+++ b/.github/workflows/docker-image-cpu.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         TAG=$(date -u +%Y%m%d%H%M%S)
 
-        docker build --build-arg VHLS_PATH=/mnt/applications/Xilinx/23.1 \
+        docker build --no-cache --build-arg VHLS_PATH=/mnt/applications/Xilinx/23.1 \
           --build-arg VHLS_VERSION=2023.1 \
           -f Dockerfile-cpu \
           --tag docker.io/deepwok/mase-docker-cpu:$TAG . || exit 1
