--- a/Dockerfile-gpu
+++ b/Dockerfile-gpu
@@ -12,14 +12,11 @@ CMD ["bash"]
 
 # Install PyTorch and Torch-MLIR
 RUN pip3 install --upgrade pip
-RUN pip3 install --pre torch-mlir torchvision \
-                 -f https://github.com/llvm/torch-mlir-release/releases/expanded_assets/dev-wheels \
-                 --extra-index-url https://download.pytorch.org/whl/nightly/cu121
+RUN pip3 install torch torchvision torchaudio
 
 # Install pip packages 
 ADD install-pips.sh install-pips.sh
 RUN bash install-pips.sh
-RUN pip3 install torch_geometric 
 
 # Add environment variables
 ARG VHLS_PATH
